objects/pse__Forecast_Enhanced_Summary__c.object
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedSummaryHelp</customHelpPage>
    <description>Stores the billing forecast records created for a region, practice, or group.</description>
    <fields>
        <fullName>pse__Forecast_Enhanced_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The billing forecast calculation associated with the record.</description>
        <inlineHelpText>The forecast calculation associated with the record.</inlineHelpText>
        <label>Billing Forecast Calculation</label>
        <referenceTo>pse__Forecast_Enhanced_Calculation__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The group plan for the billing forecast.</description>
        <inlineHelpText>The group plan for the forecast.</inlineHelpText>
        <label>Group Plan</label>
        <referenceTo>pse__Group_Plan__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The group for the billing forecast summary.</description>
        <inlineHelpText>The group for the forecast summary.</inlineHelpText>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the billing forecast summary for the parent region, practice, or group in the hierarchy for this billing forecast summary.</description>
        <inlineHelpText>A lookup to the forecast summary for the parent region, practice or group in the hierarchy for this forecast summary.</inlineHelpText>
        <label>Parent Billing Forecast Summary</label>
        <referenceTo>pse__Forecast_Enhanced_Summary__c</referenceTo>
        <relationshipLabel>Child Billing Forecast Summaries</relationshipLabel>
        <relationshipName>Child_Forecast_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The practice plan for the billing forecast.</description>
        <inlineHelpText>The practice plan for the forecast.</inlineHelpText>
        <label>Practice Plan</label>
        <referenceTo>pse__Practice_Plan__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The practice for the billing forecast summary.</description>
        <inlineHelpText>The practice for the forecast summary.</inlineHelpText>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The region plan for the billing forecast.</description>
        <inlineHelpText>The region plan for the forecast.</inlineHelpText>
        <label>Region Plan</label>
        <referenceTo>pse__Region_Plan__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The region for the billing forecast summary.</description>
        <inlineHelpText>The region for the forecast summary.</inlineHelpText>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Forecast Summary</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FSummary-{0000}</displayFormat>
        <label>Billing Forecast Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>